# CUK_MCP

./: README.md  main.py  pyproject.toml
app/: context.py
app/tools/: file_tools.py  file_tools_helper.md  math_tools.py  timetable_tools.py  web_tool.py  web_tools.md  web_tools.py
classes/: AcademicCalendarCrawler_class.py  BaseWebCrawler.py  BaseWebCrawler_class.py  DepartmentNoticeCrawler_class.py  GoogleCalendarAPIClient_class.py  Selenium_class.py  UniversityNoticeCrawler.py  UniversityNoticeCrawler_class.py  department_data.py  file_class.py
data/: ctype_data.py  department_data.py
